--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Sergio J. Matos",
+  "name": "sergiomatos",
   "version": "1.0.0",
-  "title": "sergiomatos",
+  "title": "Sergio J Matos",
   "homepage": "http://www.sergiomatos.com/",
   "description": "",
   "author": "joaotdn@gmail.com",
